<resources>
    <string name="app_name">MyNotes</string>
    <string name="screen_title_dashboard">My notes</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="appbar_add_category">Add new category</string>
    <string name="appbar_add_note">Add new note</string>
    <string name="appbar_delete_category">Delete category</string>
    <string name="appbar_search_note">Search note</string>
    <string name="appbar_settings">Settings</string>

    <string name="button_add_category_add">ADD</string>

    <string name="button_cancel">CANCEL</string>
    <string name="button_yes">YES</string>

    <string name="error_category_already_exist">This category already exist</string>

    <string name="screen_title_add_note">ADD NEW NOTE</string>
    <string name="button_save_note">SAVE</string>

    <string name="prompt_info_title">Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">SafeNotes is using Android biometric authentication</string>
    <string name="prompt_confirm_delete_note">Sure to delete note ?</string>
    <string name="prompt_confirm_delete_category">Deleting %1$s will delete all its notes, are you sure ?</string>
    <string name="hint_add_category">Type new category name</string>

    <string name="error_no_authentication_title">No authentication set</string>
    <string name="error_no_authentication_method">Please set Pin, Password, Pattern or Biometric authentication in device first.</string>

    <string name="label_no_notes">No notes found</string>
    <string name="label_search_text">Type to search</string>

    <string name="settings_auth_text1">Authentication on app launch</string>
    <string name="settings_auth_text2">Prompt for authentication (Password, Pattern, Pin or Biometric based on your setting) upon app launch</string>
    <string name="settings_version_text1">Application version</string>
    <string name="settings_developer_text1">Developer</string>
    <string name="settings_developer_email">vikaspatel7783@gmail.com</string>
    <string name="settings_export_text1">Export notes (/Documents/safenotes.json)</string>
    <string name="settings_export_description">Export all your notes as file in your device so that it can be imported back again to restore your save notes</string>

    <string name="settings_import_text1">Import notes (/Documents/safenotes.json)</string>
    <string name="settings_import_description">Import all your notes to restore your saved notes</string>

    <string name="user_guide_text1">Select icon to add note category (e.g. Finance, Work, Personal etc)</string>
    <string name="user_guide_text2">Select icon to add your notes for created category</string>
    <string name="user_guide_text3">Select icon to find note(s) across categories</string>
    <string name="user_guide_text4">Select icon to delete category</string>
    <string name="user_guide_text5">Select icon to customize your settings</string>
</resources>