<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_guide_background"
    android:padding="10dp">

    <include layout="@layout/bottomsheet_handle"/>

    <TextView
        android:id="@+id/textAddCategoryError"
        android:layout_below="@+id/bottomsheet_handle"
        android:gravity="right"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:text="@string/error_category_already_exist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtTextAddCategory"
        android:layout_below="@+id/textAddCategoryError"
        android:background="@drawable/edittext_style"
        android:textColor="@color/note_header_bkg"
        android:hint="@string/hint_add_category"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="20"
        android:maxLines="1"
        android:inputType="textPersonName" />

    <RelativeLayout
        android:id="@+id/containerAddCategoryButtons"
        android:layout_below="@+id/edtTextAddCategory"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonAddCategoryCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/buttonAddCategoryAdd"
            android:layout_toEndOf="@+id/buttonAddCategoryCancel"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_add_category_add"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>


</RelativeLayout>