<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/user_guide_icon_width"
            android:layout_height="@dimen/user_guide_icon_height"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_add_category"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/note_header_bkg"
            android:text="@string/user_guide_text1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/user_guide_icon_width"
            android:layout_height="@dimen/user_guide_icon_height"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_add_note"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/note_header_bkg"
            android:text="@string/user_guide_text2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/user_guide_icon_width"
            android:layout_height="@dimen/user_guide_icon_height"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_note_search"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/note_header_bkg"
            android:text="@string/user_guide_text3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/user_guide_icon_width"
            android:layout_height="@dimen/user_guide_icon_height"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_delete_category_user_guide"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/note_header_bkg"
            android:text="@string/user_guide_text4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/user_guide_icon_width"
            android:layout_height="@dimen/user_guide_icon_height"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_settings_user_guide"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/note_header_bkg"
            android:text="@string/user_guide_text5"/>
    </LinearLayout>

</LinearLayout>