<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_guide_background"
    android:padding="15dp">

    <RelativeLayout
        android:id="@+id/settings_container_auth"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_settings_auth1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/note_header_bkg"
            android:textStyle="bold"
            android:text="@string/settings_auth_text1"/>

        <TextView
            android:id="@+id/label_settings_auth2"
            android:layout_below="@+id/label_settings_auth1"
            android:layout_toStartOf="@id/settings_auth_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/settings_subtext_gray"
            android:text="@string/settings_auth_text2"/>

        <ToggleButton
            android:id="@+id/settings_auth_switch"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/note_header_bkg"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/round_corner"
            android:layout_marginStart="15dp"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_container_version"
        android:layout_below="@+id/settings_container_auth"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_settings_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/note_header_bkg"
            android:textStyle="bold"
            android:text="@string/settings_version_text1"/>

        <TextView
            android:id="@+id/value_settings_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_settings_version"
            android:textColor="@color/settings_subtext_gray"
            android:text="0.0.0"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_container_developer"
        android:layout_below="@+id/settings_container_version"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/note_header_bkg"
            android:textStyle="bold"
            android:text="@string/settings_developer_text1"/>

        <TextView
            android:id="@+id/value_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_developer"
            android:textColor="@color/settings_subtext_gray"
            android:text="@string/settings_developer_email"/>

        <ImageView
            android:id="@+id/ic_developer_email"
            android:layout_alignParentEnd="true"
            android:background="@drawable/round_corner"
            android:src="@android:drawable/ic_dialog_email"
            android:layout_marginStart="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_container_export"
        android:layout_below="@+id/settings_container_developer"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/note_header_bkg"
            android:textStyle="bold"
            android:text="@string/settings_export_text1"/>

        <TextView
            android:id="@+id/value_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_export"
            android:layout_toStartOf="@id/ic_developer_export"
            android:textColor="@color/settings_subtext_gray"
            android:text="@string/settings_export_description"/>


        <ImageView
            android:id="@+id/ic_developer_export"
            android:layout_alignParentEnd="true"
            android:background="@drawable/round_corner"
            android:src="@android:drawable/ic_menu_upload"
            android:layout_marginStart="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />

        <ProgressBar
            android:id="@+id/progress_export_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/note_header_bkg"
            android:visibility="gone"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_container_import"
        android:layout_below="@+id/settings_container_export"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/note_header_bkg"
            android:textStyle="bold"
            android:text="@string/settings_import_text1"/>

        <TextView
            android:id="@+id/value_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_import"
            android:textColor="@color/settings_subtext_gray"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/ic_notes_import"
            android:text="@string/settings_import_description"/>


        <ImageView
            android:id="@+id/ic_notes_import"
            android:layout_alignParentEnd="true"
            android:background="@drawable/round_corner"
            android:src="@android:drawable/ic_menu_more"
            android:layout_marginStart="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />

        <ProgressBar
            android:id="@+id/progress_import_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/note_header_bkg"
            android:visibility="gone"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</RelativeLayout>